--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
+    "resend": "^6.5.2",
     "three": "^0.181.2"
   },
   "devDependencies": {
